k8s/discord-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot
  namespace: chris-discord
  labels:
    app: discord-bot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      labels:
        app: discord-bot
    spec:
      containers:
        - name: discord-bot
          image: docker.io/christophertyoung/discord_bot:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: discord-bot-svc
  namespace: chris-discord
  labels:
    app: discord-bot
spec:
  type: ClusterIP
  selector:
    app: discord-bot
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
