k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-bot-ingress
  namespace: chris-discord
spec:
  ingressClassName: nginx
  rules:
    - host: discord-bot-controller.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: discord-bot-svc
                port:
                  number: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: chris-discord
spec:
  ingressClassName: nginx
  rules:
    - host: discord-bot-controller.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-controller-svc
                port:
                  number: 80
